@@ -1,3 +1,7 @@
+2017/02/15:
+Install Makefile.preprocess with the package, so users can rely on it
+without needing to copy it.
+
 2017/02/13:
 Add a new variety of visitors, "mapreduce".
 
